--- a/templates/login.html
+++ b/templates/login.html
@@ -13,8 +13,8 @@
     <!-- Formulário de login -->
     <form method="POST">
         <div>
-            <label for="usuario">Usuário:</label>
-            <input type="text" id="usuario" name="usuario" required>
+            <label for="email">E-mail:</label>
+            <input type="text" id="email" name="email" required>
         </div>
         <div>
             <label for="senha">Senha:</label>
