--- a/templates/novo_login.html
+++ b/templates/novo_login.html
@@ -21,8 +21,8 @@
             <input type="date" id="dataNasc" name="dataNasc" required>
         </div>
         <div>
-            <label for="usuario">Usuário:</label>
-            <input type="text" id="usuario" name="usuario" required>
+            <label for="email">E-mail:</label>
+            <input type="text" id="email" name="email" required>
         </div>
         <div>
             <label for="senha">Senha:</label>
