--- a/templates/novo_login.html
+++ b/templates/novo_login.html
@@ -26,7 +26,7 @@
         </div>
         <div>
             <label for="senha">Senha:</label>
-            <input type="password" id="senha" name="senha" required>
+            <input type="password" id="senha" name="senha" required pattern="^\S+$" title="A senha não pode conter espaços">
         </div>
         <button type="submit">Cadastrar</button>
     </form>
