Ajustes em campos

--- a/templates/login.html
+++ b/templates/login.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <!-- Título Login -->
-    <h2 class="login-title">Login</h2>
-
-    <!-- Formulário de login -->
+    <h2>Login</h2>
     <form method="POST">
         <div>
             <label for="email">E-mail:</label>
